@startuml
skinparam classAttributeIconSize 0
hide circle

title AddPetCommand Class Diagram

interface "<<interface>>\nCommand" as Command {
    + exec(String args) : void
}

class AddPetCommand {
    - {static} LOGGER : Logger
    + AddPetCommand(PetList pets)
    + exec(String args) : void
}

class PetList {
    + add(Pet newPet) : boolean
}

class Pet {
    - name : String
    - species : String
    - age : int
    + Pet(String name, String species, int age)
}

Command <|.. AddPetCommand

AddPetCommand --> "1" PetList : uses >

PetList *--> "*" Pet : contains >

AddPetCommand -right[hidden]- PetList

@enduml